--- a/data/curriculum.yml
+++ b/data/curriculum.yml
@@ -14,6 +14,11 @@ person:
     addressRegion: "SP"
     postalCode: ""
     addressCountry: "Brasil"
+
+about:
+  - "I am a 32 year old front-end developer who lives in Brazil and works in Locaweb."
+  - "Originally, five years ago, I was a full-stack developer , working with PHP/CodeIgniner, but when I move to São Paulo, decided work primary with HTML&CSS. No regrets."
+
 experience:
   -
     dates:
