--- a/data/curriculum.yml
+++ b/data/curriculum.yml
@@ -158,3 +158,4 @@ experience:
     ocuppation: "Support"
     activities:
       - "Support internal users, development of small internal financial apps, and other banking services."
+skills:
