--- a/data/curriculum.yml
+++ b/data/curriculum.yml
@@ -158,4 +158,13 @@ experience:
     ocuppation: "Support"
     activities:
       - "Support internal users, development of small internal financial apps, and other banking services."
+
 skills:
+  - Javascript=9
+  - HTML=10
+  - CSS=10
+  - SASS=10
+  - Grunt=7
+  - MIddleman=8
+  - PHP=8
+  - Jasmine=8
