--- a/data/curriculum.yml
+++ b/data/curriculum.yml
@@ -168,3 +168,21 @@ skills:
   - MIddleman=8
   - PHP=8
   - Jasmine=8
+  - Yeoman
+  - Gulp
+  - AngularJS
+  - Jasmine
+  - Rails
+  - jQueryUI
+  - Git
+  - RequireJS AMD
+  - Bootstrap
+  - Vanilla
+  - great eye/(passion) for detail
+  - test-oriented
+  - A/B tests
+  - templating languages
+  - high-performance, reusable code
+  - version control systems
+  - Backbone
+  - mysql
