--- a/data/curriculum.yml
+++ b/data/curriculum.yml
@@ -15,6 +15,12 @@ person:
     postalCode: ""
     addressCountry: "Brasil"
 
+social:
+  linkedin: http://linkedin.com/in/letanure
+  facebook: http://www.facebook.com/letanure
+  gthub: http://github.com/letanure
+  blog: http://letanure.github.io/
+
 about:
   - "I am a 32 year old front-end developer who lives in Brazil and works in Locaweb."
   - "Originally, five years ago, I was a full-stack developer , working with PHP/CodeIgniner, but when I move to São Paulo, decided work primary with HTML&CSS. No regrets."
