--- a/data/education.yml
+++ b/data/education.yml
@@ -4,15 +4,15 @@ colleges:
       start: "2000"
       end: "2004"
     institution: "Universidade de Brasília - UnB"
-    url: "Universidade de Brasília - UnB"
-    course: "Bachelor of Computer (B.Sc.), Computer Science"
+    url: "http://www.cic.unb.br/index.php?option=com_content&view=category&layout=blog&id=6&Itemid=18"
+    course: "Degree in Computer Sciences"
   -
     dates:
       start: "2004"
       end: "2006"
     institution: "FUMEC"
-    url: "FUMEC"
-    course: "degree in Computer Science"
+    url: "http://www.fumec.br/cursos/graduacao/ciencia-da-computacao/apresentacao/"
+    course: "Bachelor's degree in Computer Science"
 trainings:
   -
     dates:
