interests list update

--- a/data/interests.yml
+++ b/data/interests.yml
@@ -1,14 +1,16 @@
-- Reading
-- Open Source projects
-- Automation tools
-- Architecture
-- User Experience (UX)
-- Information Architecture
-- Website Optimization
-- Web Performance
-- SEO
-- framework creation
-- rocesses and Standards creation
-- start ups
+- "Open Source projects"
+- "Automation tools"
+- "User Experience (UX)"
+- "Information Architecture"
+- "Teaching"
+- "Architecture (no, this item is about constructing buildings)"
+- "Framework creation"
+- "Web Performance"
+- "Website Optimization"
+- "SEO"
+- "Processes and Standards creation for me and colleagues"
+- "Read everything I can put in my hands"
+- "Startups"
+- "Web apps"
 
 
