remove projects list

--- a/data/projects.yml
+++ b/data/projects.yml
@@ -3,3 +3,75 @@ projects:
     name: ""
     url: ""
     desc: ""
+
+# Mulheres de Negócios      http://www.mulherdenegocios.sebrae.com.br/
+# MPE Brasil        http://www.premiompe.sebrae.com.br/
+# PDGC Sescoop        http://pdgc.brasilcooperativo.coop.br/hotsite/
+# Seminários FNQ        http://www8.fnq.org.br/seminarios/mt/
+# Dashboard ViaVarejo       http://vorttex.com.br/dashboard-via-varejo-casas-bahia/
+# Fototica        http://www.fototica.com.br/
+# PNLD Saraiva        http://pnld.editorasaraiva.com.br/
+# Conecte Saraiva       http://conecte.editorasaraiva.com.br/
+# Cultura em Curso      http://www.culturaemcurso.com.br
+# Leitor ebooks Saraiva     http://leitor.editorasaraiva.com.br/
+# Palpiteros        http://www.palpiteros.com/
+# Medicinia         http://medicinia.com.br/
+# RubyConf        http://www.rubyconf.com.br/
+# Midas Studios         http://midasstudios.com.br/
+# Sport Track         http://sporttrack.com.br/
+# Série 24 HORAS        http://www.band.com.br/24h/
+# Mulheres Ricas        http://www.band.com.br/mulheresricas/
+# Julie e os Fantasmas      http://band.com.br/julieeosfantasmas/
+# Projeto Fashion       http://www.band.com.br/projetofashion
+# Duelo de Misses app     http://apps.facebook.com/duelodemisses
+# Duelo de Misses       http://www.band.com.br/missuniverso/duelodemisses/
+# TV Band         http://www.band.com.br/
+#   http://vivabem.band.com.br/horoscopo/
+#   http://vivabem.band.com.br/receitas/              http://bandnewsfm.band.com.br/
+#   http://www.band.com.br/torre/
+#   http://bandsports.band.com.br/
+#   http://www.band.com.br/tribos/
+#   http://noticias.band.com.br/servicos/previsao-do-tempo/
+#   http://noticias.band.com.br/transito-sp/            http://noticias.band.com.br/blogs/                    http://cqc.band.com.br/caricaturas/
+#   http://noticias.band.com.br/colunas/
+#   http://noticias.band.com.br/primeirojornal/
+#   http://noticias.band.com.br/brasilurgente/
+#   http://noticias.band.com.br/jornaldaband/
+#   http://noticias.band.com.br/jornaldanoite/
+#   http://noticias.band.com.br/policia24h/
+#   http://esporte.band.com.br/velocidade/formula-indy/2013/
+#   http://esporte.band.com.br/velocidade/formula-1/
+#   http://esporte.band.com.br/gatas/
+#   http://esporte.band.com.br/jogoaberto/
+#   http://esporte.band.com.br/terceirotempo/
+#   http://entretenimento.band.com.br/famosos/
+#   http://www.band.com.br/gameover/
+#   http://bandfolia.band.com.br/
+#   http://agoraetarde.band.com.br/
+#   http://aliga.band.com.br/
+#   http://cqc.band.com.br/
+#   http://vivabem.band.com.br/beleza/
+#   http://vivabem.band.com.br/casamento/
+# Dia Dos Namorados       http://www.band.com.br/diadosnamorados/
+# Dia das Mães        http://www.band.com.br/diadasmaes/
+# O casamento Real      http://www.band.com.br/entretenimento/ocasamentoreal/
+# Dia dia         http://www.band.com.br/diadia/
+# Roberto Carlos 70 anos      http://www.band.com.br/robertocarlos70
+# A Liga          http://band.com.br/aliga
+# Corinthians Penta       http://www.band.com.br/app/corinthianspenta/
+# Que Absolut sou eu?     http://apps.facebook.com/queabsolutsoueu/
+# Comunidade Empresas Itaú    https://www.comunidadeempresas.com.br/
+# UOL Placar das Eleições     http://placar.eleicoes.uol.com.br/2010/2turno/
+# Site bahal        http://www.bahal.com.br/
+# Site Alphorria        http://www.alphorria.com.br/
+# Site FibraCom         http://www.fibraconconstrutora.com.br/
+# Site ImRad        http://www.imrad.com.br/
+# Site Exon Biotec      http://www.exonbiotec.com.br/
+# Galleria della Pietra       http://galleriadellapietra.com.br/
+# Ancona Engenharia       http://www.anconaengenharia.com.br/
+# GreenValle Engenharia       http://greenvalle.com.br/
+# Santa Sophia Café     http://www.santasophiacafe.com/
+# Vesper Construtora      http://www.construtoravesper.com.br/
+# Tetum Engenharia      http://www.tetumengenharia.com.br/
+# Site Somattos         http://www.somattos.com.br/
+# PaperToy DialHost       http://paperwork.dialhost.com.br/
