--- a/data/person.yml
+++ b/data/person.yml
@@ -7,7 +7,7 @@ email : "letanure@gmail.com"
 url: "http://github.com/letanure/"
 nationality: "Brazilian"
 birth: "29/07/1981"
-resume: "http://letanure.github.io/curriculum-vitae/"
+resume: "http://letanure.github.io/resume/"
 address:
   streetAddress: "Alameda Macieira da Maia, 103, Planalto Paulista"
   addressLocality: "São Paulo"
