hide address, change text

--- a/data/person.yml
+++ b/data/person.yml
@@ -22,5 +22,5 @@ social:
   blog: http://letanure.github.io/
 
 about:
-  - "I am a 32 year old front-end developer who lives in Brazil and works in Locaweb."
+  - "I am a front-end developer who lives in Brazil and works in Locaweb."
   - "Originally, five years ago, I was a full-stack developer , working with PHP/CodeIgniner, but when I move to São Paulo, decided work primary with HTML&CSS. No regrets."
