--- a/data/person.yml
+++ b/data/person.yml
@@ -23,4 +23,4 @@ social:
 
 about:
   - "I am a front-end developer who lives in Brazil and works in Locaweb."
-  - "Originally, five years ago, I was a full-stack developer , working with PHP/CodeIgniner, but when I move to São Paulo, decided work primary with HTML&CSS. No regrets."
+  - "Originally, five years ago, I was a full-stack developer , working with PHP/CodeIgniter, but when I moved to São Paulo, decided work primary with HTML&CSS. No regrets."
