improve about me text

--- a/data/person.yml
+++ b/data/person.yml
@@ -29,5 +29,7 @@ resumeProfile:
   - Excellent written and oral communication skills
 
 about:
-  - "I am a front-end developer who lives in Brazil and works in Locaweb."
-  - "Originally, five years ago, I was a full-stack developer , working with PHP/CodeIgniter, but when I moved to São Paulo, decided work primary with HTML&CSS. No regrets."
+  - Working with web development since 2002, initially as a full-stack PHP programmer, before there was the separation of back and front end.
+  - In 2010 I moved to São Paulo to work at UOL as front-end and from then I specialized in this area, because I like the technologies and the boom of new methods and frameworks that have emerged.
+  - My work is often more focused on the Javascript, but always contribute to other teams, from the definition of product and features, the possibilities and improvements in design, showing new tools, methods and references, building POCs and teaching what I know to my colleagues.
+  - I like the whole process of front-end development, well-structured and modularized HTML code, to the implementation of a CSS layout with well done and pixel-perfect code, through accessibility, performance and concern for SEO.
