--- a/data/person.yml
+++ b/data/person.yml
@@ -1,18 +1,18 @@
 name:
   full: "Luiz Eduardo Tanure Bacelar"
   short: "Luiz Tanure"
-telephone: "+55 11 98745-3156"
+telephone: "+49 172 837 1197"
 email : "letanure@gmail.com"
 url: "http://github.com/letanure/"
 nationality: "Brazilian"
-birth: "29/07/1981"
+birth: "29.07.1981"
 resume: "http://letanure.github.io/resume/"
 address:
-  streetAddress: "Alameda Macieira da Maia, 103, Planalto Paulista"
-  addressLocality: "São Paulo"
-  addressRegion: "SP"
+  streetAddress: "Landsberger Allee"
+  addressLocality: "Berlin"
+  addressRegion: ""
   postalCode: ""
-  addressCountry: "Brasil"
+  addressCountry: "Germany"
 
 social:
   linkedin: http://linkedin.com/in/letanure
@@ -25,7 +25,7 @@ resumeHeadline:
 
 resumeProfile:
   - Detail-oriented professional with thirteen years of experience as a software developer. 
-  - Focused on web/mobile applications, using HTML5/CSS, pure Javascript or frameworks like jQuery, Angular, Ember, also with good skills in Ruby, Rails, and PHP and other related technologies
+  - Focused on web/mobile applications, using HTML5/CSS, pure Javascript or frameworks like jQuery, Angular, React, also with good skills in NodeJs, Ruby, and PHP and other related technologies
   - Excellent written and oral communication skills
 
 about:
