--- a/data/person.yml
+++ b/data/person.yml
@@ -21,11 +21,11 @@ social:
   blog: http://letanure.github.io/
 
 resumeHeadline:
-  - Experienced front-end developer passionate about cutting-edge technologies and product development
+  - Experienced front-end developer living in Berlin that loves create products and all about development
 
 resumeProfile:
   - Detail-oriented professional with thirteen years of experience as a software developer. 
-  - Focused on web/mobile applications, using HTML5/CSS, pure Javascript or frameworks like jQuery, Angular, React, also with good skills in NodeJs, Ruby, and PHP and other related technologies
+  - Focused on web/mobile applications, using HTML5/CSS, pure Javascript or frameworks like  React, Angular, VueJS, jQuery, also with good skills in NodeJs, Ruby, and PHP and other related technologies
   - Excellent written and oral communication skills
 
 about:
