--- a/data/metasocial.yml
+++ b/data/metasocial.yml
@@ -18,4 +18,4 @@ opengraph:
   image: "http://letanure.github.io/resume/image.jpg"
   description: "I am a 36 year old front-end developer who lives in Berlin and works at Urbanara"
   site_name: "Luiz Tanure Resume"
-  admins: "Facebook numeric ID"
+  admins: "809878289"
